services/project-jackson/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
      istio-injection: enabled
  name: default #Change to 'project-jackson' and add ns to other yaml file
