services/project-jackson/manifests/jackson-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: jackson-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
# uncomment all lines below if you'd like to use tls certificates.
#   tls:
#     httpsRedirect: true # sends 301 redirect for http requests
# - port:
#     number: 443
#     name: https
#     protocol: HTTPS
#   tls:
#     mode: SIMPLE
#     serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
#     privateKey: /etc/istio/ingressgateway-certs/tls.key
#   hosts:
#   - "*"
