services/project-jackson/manifests/jackson-ui-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jackson-ui
spec:
  hosts:
  - "*"
  gateways:
  - jackson-gateway
  http:
    - route:
      - destination:
          host: jackson-ui
          port:
            number: 8080
